# lipi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PUBLISHING.md  README.md  compare_extraction_dump.py  config.example.json  config.json  flask_app.py  hindi_preprocessor.py  indic_pdf_extractor.py  pdf_cutter_service.py  pdf_service.py  pyproject.toml  requirements.txt  streamlit_app.py
src/lipi/: __init__.py  _lexicon.py  _quality.py  batch.py  candidates.py  cli.py  correction.py  extractor.py  lm.py  ml_fallback.py  preprocessor.py  regression.py  splitter.py  symspell_corrector.py  text_pipeline.py
src/lipi/data/: hindi_freq_small.txt
src/lipi/mappings/: __init__.py  chanakya.py  krutidev.py  walkman_chanakya.py
templates/: batch_process.html  config_editor.html  index.html  layout.html  single_pdf.html
tests/: test_batch.py  test_candidates.py  test_cli_corpus.py  test_correction.py  test_extractor.py  test_flask_app.py  test_mappings.py  test_preprocessor.py  test_regression.py  test_splitter.py  test_symspell_corrector.py  test_text_pipeline.py
tools/: build_frequency_lexicon.py  train_kenlm.py
web/: flask_app.py
web/templates/: config_editor.html  layout.html  single_pdf.html
