[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lipi-aparsoft"
version = "1.0.7"
description = "Legacy Hindi font (KrutiDev/Chanakya) to Unicode Devanagari toolkit with PDF splitting"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Aparsoft Private Limited", email = "hello@aparsoft.in" },
]
keywords = [
  "pdf",
  "split",
  "hindi",
  "krutidev",
  "chanakya",
  "devanagari",
  "unicode",
  "edtech",
  "indic",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
  "Natural Language :: Hindi",
]
requires-python = ">=3.9"

dependencies = [
  "pypdf>=4.0.0",
]

[project.optional-dependencies]
flask = [
  "Flask>=3.0.0",
  "watchdog>=3.0.0",
  "tqdm>=4.60.0",
  "requests>=2.31.0",
  "werkzeug>=3.0.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "black>=24.0",
  "ruff>=0.4.0",
]

[project.scripts]
lipi = "lipi.cli:main"

[project.urls]
Homepage = "https://aparsoft.in"
Repository = "https://github.com/aparsoft/lipi"
"Bug Tracker" = "https://github.com/aparsoft/lipi/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
